2005-05-05  Owen Taylor  <otaylor@redhat.com>

	* glib/gdataset.[ch] glib/gdatasetprivate.h: Add 
	g_datalist_set/unset_flags(), g_datalist_get_flags() functions
	to squeeze some bits into a GDataSet... this is needed for
	efficient implementation of toggle references in GObject.

	* tests/gobject/references.c tests/gobject/Makefile.am:
	Add a test case for weak and toggle references.

	* glib/gfileutils.[ch]: Rename g_file_replace() back
	to g_file_set_contents().

	* glib/glib.symbols: Update.

2005-05-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/gstring.c (g_str_equal, g_str_hash): Move docs
	inline.

2005-05-01  Matthias Clasen  <mclasen@redhat.com>

	* glib/ghash.h: Rename some parameters to make gtk-doc
	happy.

	* glib/gutils.c: 
	* glib/gwin32.c: 
	* glib/gstdio.c: Fix some typos, mark new API as "Since 2.8".

2005-04-29  Matthias Clasen  <mclasen@redhat.com>

	* glib/gtree.c: Clarify some docs. (#302062, Matthew F. Barnes)

2005-04-28  Matthias Clasen  <mclasen@redhat.com>

	* glib/gstrfuncs.c (g_strcompress): Warn and don't crash
	when meeting a trailing \\.  (#301373, Benjamin Otte)

2005-04-27  Tor Lillqvist  <tml@novell.com>

	* glib/gconvert.c (open_converter, g_convert_with_iconv): Don't
	call g_set_error() unless the GError pointer is non-NULL. This
	avoids infinite recursion problems in certain rare situations on
	Windows, when g_locale_from_utf8() is called from
	_glib_get_locale_dir() after the change below. It's the
	_glib_gettext() calls to translate error messages that are
	parameters to g_set_error() that cause the recursion, not
	g_set_error() itself.

	* glib/gwin32.c (g_win32_locale_filename_from_utf8): New
	function. Converts a filename to the system codepage, and if a
	straight conversion isn't possible (because the filename contains
	characters not in the system codepage), try looking up the
	filename (which should refer to an existing file for this to
	succeed) with short (8.3) pathname components.
