@@ -859,6 +859,30 @@ unknown_short_test (void)
   g_option_context_free (context);
 }
 
+/* test that lone dashes are treated as non-options */
+void lonely_dash_test (void)
+{
+  GOptionContext *context;
+  gboolean retval;
+  GError *error = NULL;
+  gchar **argv;
+  int argc;
+
+  context = g_option_context_new (NULL);
+
+  /* Now try parsing */
+  argv = split_string ("program -", &argc);
+
+  retval = g_option_context_parse (context, &argc, &argv, &error);
+
+  g_assert (retval);
+
+  g_assert (argv[1] && strcmp (argv[1], "-") == 0);
+
+  g_strfreev (argv);
+  g_option_context_free (context);
+}
+
 int
 main (int argc, char **argv)
 {
@@ -903,6 +927,9 @@ main (int argc, char **argv)
 
   /* test for bug 166609 */
   unknown_short_test ();
+
+  /* test for bug 168008 */
+  lonely_dash_test ();
 
   return 0;
 }
